Fixed deleteButton to disappear when blurred after input changes from keyboard to mouse
Enact-DCO-1.0-Signed-off-by: Hyelyn Kim (myelyn.kim@lge.com)

--- a/Chip/Chip.module.less
+++ b/Chip/Chip.module.less
@@ -25,11 +25,11 @@
 		&.right {
 			top: 0;
 			right: 0;
-			transform: translateX(100% - @lime-chip-margin);
+			transform: translateX(100% + @lime-chip-margin);
 		}
 
 		&.bottom {
-			bottom: @lime-chip-margin;
+			bottom: -@lime-chip-margin;
 			left: 50%;
 			transform: translate(-50%, 100%);
 		}
